# Kaspersky

./: CMakeLists.txt  Makefile  README.md  main.cpp  test.txt
Interrupter/: CMakeLists.txt  Interrupter.hpp
Interrupter/impl/: Interrupter.cpp  Interrupter.hpp
Models/: CMakeLists.txt  Token.cpp  Token.hpp
Models/Actions/Tokenizer/: Tokenizer.hpp
Models/Actions/Tokenizer/impl/: Tokenizer.cpp  Tokenizer.hpp
Reader/: CMakeLists.txt  Reader.cpp  Reader.hpp
Reader/impl/: Reader.cpp  Reader.hpp
Reverser/: CMakeLists.txt  Reverser.cpp  Reverser.hpp
Reverser/Contract/: ReverserContract.cpp  ReverserContract.hpp
Reverser/impl/: Reverser.cpp  Reverser.hpp
Runner/: CMakeLists.txt  Runner.cpp  Runner.hpp
Runner/impl/: Runner.cpp  Runner.hpp
Tests/: CMakeLists.txt  Mocks.hpp  Tester.hpp  Tests.hpp  main.cpp
Tests/Data/: test.txt
Tests/Handlers/: Interrupter.hpp  Reader.hpp  Reverser.hpp  Writer.hpp
TokenProcessor/: CMakeLists.txt  TokenProcessor.cpp  TokenProcessor.hpp
TokenProcessor/Contract/: TokenProcessorContract.cpp  TokenProcessorContract.hpp
TokenProcessor/impl/: TokenProcessor.cpp  TokenProcessor.hpp
Utilities/: CMakeLists.txt  Utilities.cpp  Utilities.hpp
Utilities/Exceptions/: Exceptions.hpp
Utilities/Functions/: Functions.cpp  Functions.hpp
Writer/: CMakeLists.txt  Writer.hpp
Writer/Contract/: WriterContract.cpp  WriterContract.hpp
Writer/impl/: Writer.cpp  Writer.hpp
